--- a/.classpath
+++ b/.classpath
@@ -5,6 +5,7 @@
 	<classpathentry kind="src" path="jvm"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="lib" path="lib/commons-beanutils.jar"/>
 	<classpathentry kind="lib" path="lib/commons-collections-3.2.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-configuration-1.9.jar"/>
@@ -40,6 +41,28 @@
 	<classpathentry kind="lib" path="lib/dbcp/commons-pool-1.6.jar"/>
 	<classpathentry kind="lib" path="lib/dbcp/mysql-connector-java-5.1.15-bin.jar"/>
 	<classpathentry kind="lib" path="lib/jmx/jmxtools.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-annotations-9.1.3.v20140225.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-client-9.1.3.v20140225.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-continuation-9.1.3.v20140225.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-deploy-9.1.3.v20140225.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-http-9.1.3.v20140225.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-io-9.1.3.v20140225.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-jaas-9.1.3.v20140225.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-jaspi-9.1.3.v20140225.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-jmx-9.1.3.v20140225.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-jndi-9.1.3.v20140225.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-plus-9.1.3.v20140225.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-proxy-9.1.3.v20140225.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-rewrite-9.1.3.v20140225.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-schemas-3.1.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-security-9.1.3.v20140225.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-server-9.1.3.v20140225.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-servlet-9.1.3.v20140225.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-servlets-9.1.3.v20140225.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-util-9.1.3.v20140225.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-webapp-9.1.3.v20140225.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-xml-9.1.3.v20140225.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/servlet-api-3.1.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Hadoop104"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
