--- a/.classpath
+++ b/.classpath
@@ -5,6 +5,7 @@
 	<classpathentry kind="src" path="jvm"/>
 	<classpathentry kind="src" path="log"/>
 	<classpathentry kind="src" path="guava"/>
+	<classpathentry kind="src" path="redis"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
@@ -65,6 +66,7 @@
 	<classpathentry kind="lib" path="lib/jetty/jetty-webapp-9.1.3.v20140225.jar"/>
 	<classpathentry kind="lib" path="lib/jetty/jetty-xml-9.1.3.v20140225.jar"/>
 	<classpathentry kind="lib" path="lib/jetty/servlet-api-3.1.jar"/>
+	<classpathentry kind="lib" path="lib/redis/jedis-2.0.0.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Hadoop104"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
